--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -14,16 +14,6 @@
         android:layout_height="wrap_content"
         android:text="@string/hello_world" />
 
-    <EditText
-        android:id="@+id/greeting"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView1"
-        android:layout_below="@+id/textView1"
-        android:layout_marginTop="58dp"
-        android:ems="10"
-        android:inputType="textPersonName" />
-
       
     <EditText
         android:id="@+id/response"
@@ -53,5 +43,28 @@
         android:ems="10"
         android:text="http://wifi.elcom.pub.ro/pdsd/expr_get.php" >
         </EditText>
+
+    <EditText
+        android:id="@+id/greeting"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/textView1"
+        android:layout_alignBottom="@+id/textView1"
+        android:layout_alignParentRight="true"
+        android:ems="10"
+        android:inputType="textPersonName" >
+
+        <requestFocus />
+    </EditText>
+
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/friend_identity"
+        android:layout_alignLeft="@+id/textView1"
+        android:layout_alignRight="@+id/greeting"
+        android:layout_below="@+id/textView1"
+        android:src="@drawable/ic_launcher" />
 
 </RelativeLayout>
